--- a/BR-MS/Management.html
+++ b/BR-MS/Management.html
@@ -231,10 +231,11 @@
 
     function getData(searchKey,pageNum){
         if(searchKey.state===0){
+            searchKey.state=0;
             searchKey.isPass=0;
         }
         if(searchKey.state===2){
-            searchKey.state=undefined;
+            searchKey.state=0;
             searchKey.isPass=1;
         }
         catchData({
@@ -360,9 +361,14 @@
         methods: {
             handleDateChange(){
                 // var [s,e]=[...app.dateRange];
-                var s=app.dateRange[0],e=app.dateRange[1];
-                app.query.start_time=[s.getFullYear(),s.getMonth()+1<10?'0'+(s.getMonth()+1):s.getMonth()+1,s.getDate()<10?'0'+s.getDate():s.getDate()].join('-')+" 00:00:00";
-                app.query.end_time=[e.getFullYear(),e.getMonth()+1<10?'0'+(e.getMonth()+1):e.getMonth()+1,e.getDate()<10?'0'+e.getDate():e.getDate()].join('-')+" 00:00:00";
+                if(app.dateRange){
+                    var s=app.dateRange[0],e=app.dateRange[1];
+                    app.query.start_time=[s.getFullYear(),s.getMonth()+1<10?'0'+(s.getMonth()+1):s.getMonth()+1,s.getDate()<10?'0'+s.getDate():s.getDate()].join('-')+" 00:00:00";
+                    app.query.end_time=[e.getFullYear(),e.getMonth()+1<10?'0'+(e.getMonth()+1):e.getMonth()+1,e.getDate()<10?'0'+e.getDate():e.getDate()].join('-')+" 00:00:00";
+                }else{
+                    app.query.start_time="";
+                    app.query.end_time="";
+                }
             },
             handleCurrentChange(page){
                 getData(searchKey,page);
@@ -396,6 +402,11 @@
                 app.pageNum=1;
                 Object.assign(obj,app.query);
                 Object.assign(searchKey,obj);
+                for(let key in obj){
+                    if(!obj[key]&&obj[key]!==0){
+                        delete obj[key];
+                    }
+                }
                 app.initializing=true;
                 getData(obj,1);
                 app.initializing=false;
