--- a/BR-MS/Import.html
+++ b/BR-MS/Import.html
@@ -35,7 +35,8 @@
 <div id="app" v-cloak>
     <!--入库业务-->
     <div v-show="state!==3">
-        <el-card>
+        <el-card v-loading.fullscreen="loading" element-loading-text="加载中" :rules="queryRules"
+                 element-loading-background="rgba(0,0,0,0.7)">
             <span slot="header">入库单填写</span>
             <el-form :model="inGoing" inline>
                 <p class="form-item">
@@ -275,10 +276,12 @@
     function getData(app) {
         post('/depot/initialize', {}, (data, err) => {
             if (err) {
+                app.loading=false;
                 return;
             }
             app.inGoing.warehouseName = data.warehouseName;
             app.inGoing.realName = data.realName;
+            app.loading=false;
         });
     }
 
@@ -335,6 +338,7 @@
         el: '#app',
         data: function () {
             return {
+                loading:true,
                 state:0,
                 pageNum0: 1,
                 pageSize: 6,
@@ -464,6 +468,7 @@
                     method: '入库',
                     inboundNum: app.inGoing.inboundNum,
                     founder: app.inGoing.founder,
+                    createTime:app.inGoing.createTime+' 00:00:00',
                     list: (() => {
                         newList = [];
                         for (var item of app.inResult) {
@@ -471,7 +476,7 @@
                             Object.assign(obj, {
                                 scheduleId: item.scheduleId,
                                 amount: item.amount,
-                                createTime: item.createTime
+                                inboundTime: Date.parse(item.inboundTime)
                             });
                             newList.push(obj);
                         }
