--- a/BR-MS/PendingItems.html
+++ b/BR-MS/PendingItems.html
@@ -35,7 +35,7 @@
     <el-card>
         <el-table
             :data="items"
-            v-loading.fullscreen="states.initializing" element-loading-text="正在获取数据">
+            v-loading.fullscreen="states.initializing" element-loading-text="正在获取数据" element-loading-background="rgba(0,0,0,0.7)">
         <el-table-column
                 prop="userRealName" label="申请人" width="100px"></el-table-column>
         <el-table-column
